--- a/src/app/challenges/current-challenge/_current-challenge.component.common.scss
+++ b/src/app/challenges/current-challenge/_current-challenge.component.common.scss
@@ -1,6 +1,42 @@
+@import "../../../theme/colors";
+
 .page {
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 20;
+}
+
+.week {
+  color: $secondary;
+  font-weight: bold;
+  margin: 15 0;
+}
+
+.day {
+  justify-content: center;
+  align-items: center;
+  margin: 10;
+
+  width: 50;
+  height: 50;
+  border-color: $primary;
+  border-width: 1;
+  border-radius: 50%;
+  color: $primary;
+}
+
+.completed {
+  background: $success;
+  color: white;
+}
+
+.failed {
+  background: $fail;
+  color: white;
+}
+
+.not-settable {
+  background: #ccc;
+  color: #535353;
 }
