--- a/src/app/challenges/day-modal/day-modal.component.html
+++ b/src/app/challenges/day-modal/day-modal.component.html
@@ -1,4 +1,4 @@
-<FlexboxLayout>
+<!-- <FlexboxLayout>
   <Label [text]="loadedDate | date" textWrap="true"></Label>
 
   <Button
@@ -7,4 +7,7 @@
     (tap)="onHandleInput('Completed')"
   ></Button>
   <Button text="Fail" class="btn" (tap)="onHandleInput('Failed')"></Button>
+</FlexboxLayout> -->
+<FlexboxLayout>
+  <ns-challenge-actions></ns-challenge-actions>
 </FlexboxLayout>
