--- a/src/app/challenges/current-challenge/current-challenge.component.html
+++ b/src/app/challenges/current-challenge/current-challenge.component.html
@@ -1,10 +1,10 @@
 <!-- <ActionBar title="Current Challenge"></ActionBar> -->
 <ns-action-bar title="Current Challenge" [showBackButton]="false">
   <ActionItem ios.position="left" android.position="actionBar"
-    ><Label text="Add" nsRouterLink="/challenges/add"></Label>
+    ><Label text="&#xf0fe;" class="fa" nsRouterLink="/challenges/add"></Label>
   </ActionItem>
   <ActionItem ios.position="left" android.position="actionBar"
-    ><Label text="Edit" nsRouterLink="/challenges/edit"></Label>
+    ><Label text="&#xf044;" class="fa" nsRouterLink="/challenges/edit"></Label>
   </ActionItem>
 </ns-action-bar>
 <ScrollView>
