--- a/src/app/challenges/day-modal/day-modal.component.html
+++ b/src/app/challenges/day-modal/day-modal.component.html
@@ -9,5 +9,7 @@
   <Button text="Fail" class="btn" (tap)="onHandleInput('Failed')"></Button>
 </FlexboxLayout> -->
 <FlexboxLayout>
-  <ns-challenge-actions></ns-challenge-actions>
+  <ns-challenge-actions
+    (actionSelect)="onHandleInput($event)"
+  ></ns-challenge-actions>
 </FlexboxLayout>
