--- a/src/_app.common.scss
+++ b/src/_app.common.scss
@@ -26,6 +26,12 @@ ActionBar {
   justify-content: flex-start;
   align-items: center;
   padding: 20;
+
+  .btn {
+    width: 80%;
+    font-size: 20;
+    height: 45;
+  }
 }
 
 .btn-flat {
@@ -42,22 +48,28 @@ ActionBar {
   justify-content: flex-start;
   flex-direction: column;
   align-items: center;
-}
+  .input-field {
+    width: 80%;
 
-.input-field {
-  width: 80%;
-  .label {
-    color: $primary;
-    font-weight: bold;
-  }
-  .input {
-    border-bottom-width: 2;
-    border-color: $primary;
-    width: 100%;
+    .label {
+      color: $primary;
+      font-weight: bold;
+      font-family: "Oswald", "Oswald-Regular", "Oswald-Bold";
+    }
+    .input {
+      border-bottom-width: 2;
+      border-color: $primary;
+      width: 100%;
+    }
   }
 }
 
 .h1 {
   font-weight: bold;
   color: $primary;
+  font-family: "Oswald", "Oswald-Regular", "Oswald-Bold";
+}
+
+.fa {
+  font-family: "Font-Awesome", "FontAwesome";
 }
