--- a/src/app/challenges/today/today.component.html
+++ b/src/app/challenges/today/today.component.html
@@ -1,3 +1,6 @@
 <ns-action-bar title="Today's challenge" [showBackButton]="false">
 </ns-action-bar>
-<ns-challenge-actions></ns-challenge-actions>
+<ns-challenge-actions
+  (actionSelect)="onActionSelect($event)"
+  cancelText="Reset"
+></ns-challenge-actions>
