--- a/src/_app.common.scss
+++ b/src/_app.common.scss
@@ -29,7 +29,7 @@ ActionBar {
 
   .btn {
     width: 80%;
-    font-size: 20;
+    font-size: 16;
     height: 45;
   }
 }
@@ -56,10 +56,16 @@ ActionBar {
       font-weight: bold;
       font-family: "Oswald", "Oswald-Regular", "Oswald-Bold";
     }
+
+    .label.invalid {
+      color: red;
+    }
+
     .input {
       border-bottom-width: 2;
       border-color: $primary;
       width: 100%;
+      color: black;
     }
   }
 }
@@ -72,4 +78,9 @@ ActionBar {
 
 .fa {
   font-family: "Font-Awesome", "FontAwesome";
+}
+
+.ng-invalid.ng-touched {
+  border-bottom-color: red;
+  color: red;
 }
