--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,13 +1,56 @@
 <ns-action-bar
-  title="Login"
+  [title]="isLogin ? 'Signup' : 'Login'"
   [showBackButton]="false"
   [hasMenu]="false"
 ></ns-action-bar>
-<StackLayout>
+<StackLayout class="form" [formGroup]="form">
+  <StackLayout class="input-field">
+    <Label
+      class="label"
+      text="Email"
+      [ngClass]="{ invalid: !emailControlIsValid }"
+    ></Label>
+    <TextField
+      class="input"
+      returnKeyType="next"
+      keyBoardType="email"
+      [autocorrect]="false"
+      autocapitalizationType="none"
+      formControlName="email"
+    ></TextField>
+    <Label text="Enter a valid title" *ngIf="!emailControlIsValid"></Label>
+  </StackLayout>
+
+  <StackLayout class="input-field">
+    <Label
+      class="label"
+      text="Password"
+      [ngClass]="{ invalid: !passwordControlIsValid }"
+    ></Label>
+    <TextField
+      class="input"
+      returnKeyType="done"
+      [autocorrect]="false"
+      autocapitalizationType="none"
+      [secure]="true"
+      formControlName="password"
+    ></TextField>
+    <Label
+      text="Enter a valid password"
+      *ngIf="!passwordControlIsValid"
+    ></Label>
+  </StackLayout>
+
+  <Button
+    [text]="isLogin ? 'Signup' : 'Login'"
+    class="btn-flat"
+    (tap)="onSwitch()"
+  ></Button>
+
   <Button
     class="btn"
-    text="Ir para tab menu"
-    nsRouterLink="/challenges"
-    [clearHistory]="true"
+    [text]="isLogin ? 'Signup' : 'Login'"
+    (tap)="onSubmit()"
+    [isEnabled]="form.valid"
   ></Button>
 </StackLayout>
