--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -53,4 +53,6 @@
     (tap)="onSubmit()"
     [isEnabled]="form.valid"
   ></Button>
+
+  <Button text="Challenges" (tap)="onChallenges()"></Button>
 </StackLayout>
