--- a/src/app/challenges/today/today.component.html
+++ b/src/app/challenges/today/today.component.html
@@ -1,6 +1,22 @@
 <ns-action-bar title="Today's challenge" [showBackButton]="false">
 </ns-action-bar>
-<ns-challenge-actions
-  (actionSelect)="onActionSelect($event)"
-  cancelText="Reset"
-></ns-challenge-actions>
+
+<FlexboxLayout class="page" *ngIf="!currentDay">
+  <Label text="No challenge found"></Label>
+  <Button
+    class="btn"
+    text="Create challenge"
+    nsRouterLink="/challenges/add"
+    pageTransition="slideLeft"
+  ></Button>
+</FlexboxLayout>
+
+<FlexboxLayout class="page" *ngIf="currentDay">
+  <Label [text]="currentDay.date | date" class="h1"></Label>
+
+  <ns-challenge-actions
+    (actionSelect)="onActionSelect($event)"
+    [chosen]="getActionName()"
+    cancelText="Reset"
+  ></ns-challenge-actions>
+</FlexboxLayout>
