--- a/src/app/challenges/challenge-edit/challenge-edit.component.html
+++ b/src/app/challenges/challenge-edit/challenge-edit.component.html
@@ -14,7 +14,7 @@
       class="input"
       returnKeyType="next"
       required
-      ngModel
+      [(ngModel)]="title"
       #titleCtrl="ngModel"
     ></TextField>
     <Label
@@ -33,7 +33,7 @@
       class="input"
       required
       returnKeyType="done"
-      ngModel
+      [(ngModel)]="description"
       #descriptionCtrl="ngModel"
     ></TextView>
     <Label
